--- a/test.html
+++ b/test.html
@@ -11,6 +11,7 @@
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium nihil, autem velit fugit quaerat quas quo similique. Ex reiciendis voluptates est numquam ea aspernatur! Aliquid asperiores perferendis unde illum expedita.</p>
 <p>mohsenam</p>
 <a href="#">about me</a>
+<link rel="stylesheet" href="frgrge">
 <datagrid>ddedgiygit</datagrid>
 </body>
 </html>
